<resources>
    <string name="app_name">ArkPedia</string>
    <string name="tab_text_1">Operators</string>
    <string name="tab_text_2">Files</string>
    <string name="tab_text_3">Voicelines</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="basic_info">Basic Info</string>
    <string name="code_name_layout_text"><b>[Code Name]</b> %s</string>
    <string name="gender_layout_text"><b>[Gender]</b> %s</string>
    <string name="place_of_birth_layout_text"><b>[Place of Birth]</b> %s</string>
    <string name="birthday_layout_text"><b>[Birthday]</b> %s</string>
    <string name="race_layout_text"><b>[Race]</b> %s</string>
    <string name="height_layout_text"><b>[Height]</b> %s</string>
    <string name="combat_experience_layout_text"><b>[Combat Experience]</b> %s</string>
    <string name="infection_status_layout_text"><b>[Infection Status]</b>\n%s</string>
    <string name="physical_exam">Physical Exam</string>
    <string name="physical_strength_layout_text">[Physical Strength] %s</string>
    <string name="mobility_layout_text">[Mobility] %s</string>
    <string name="physiological_endurance_layout_text">[Physical Resilience] %s</string>
    <string name="tactical_planning_layout_text">[Tactical Acumen] %s</string>
    <string name="combat_skill_layout_text">[Combat Skill] %s</string>
    <string name="originium_adaptability_layout_text">[Originium Adaptability] %s</string>
    <string name="profile_text">Profile</string>
    <string name="profile_layout_text">%s</string>

    <string-array name="voice_lines">
        <item>Appointed as assistant</item>
        <item>Talk 1</item>
        <item>Talk 2</item>
        <item>Talk 3</item>
        <item>Talk after promotion 1</item>
        <item>Talk after promotion 2</item>
        <item>Talk after trust increase 1</item>
        <item>Talk after trust increase 2</item>
        <item>Talk after trust increase 3</item>
        <item>Idle</item>
        <item>Onboard</item>
        <item>Watching battle record</item>
        <item>Promotion 1</item>
        <item>Promotion 2</item>
        <item>Added to squad</item>
        <item>Appointed as squad leader</item>
        <item>Depart</item>
        <item>Begin operation</item>
        <item>Selecting operator 1</item>
        <item>Selecting operator 2</item>
        <item>Deployment 1</item>
        <item>Deployment 2</item>
        <item>In battle 1</item>
        <item>In battle 2</item>
        <item>In battle 3</item>
        <item>In battle 4</item>
        <item>4 star result</item>
        <item>3 star result</item>
        <item>Sub 3 star result</item>
        <item>Operation failure</item>
        <item>Assigned to facility</item>
        <item>Tap</item>
        <item>Trust tap</item>
        <item>Title</item>
        <item>Greeting</item>
    </string-array>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="about_me_title">ABOUT ME</string>
    <string name="about_me_sub_title">About Me</string>
    <string name="about_me">Mencintai diri saya dan waifu saya</string>
    <string name="name">Eko Ginanjar Basuki Rahmat</string>
    <string name="nim">L0122052</string>
    <string name="study_program">Informatics Students 2022</string>
    <string name="faculty">Faculty of Information Technology and Data Science</string>
    <string name="university">Sebelas Maret University</string>
    <string name="email">ekoginanjar4@gmail.com</string>
    <string name="message">Send Me Message</string>
    <string name="github">My Github Page</string>
</resources>